--- a/FantasyFootball.Rmd
+++ b/FantasyFootball.Rmd
@@ -33,19 +33,16 @@ library('scales') # visualization
 library('dplyr') # data manipulation
 library('mice') # imputation
 library('randomForest') # classification algorithm
-
-# Source and the existing selenium helper file
-# source("SeleniumDataHelper.R")
 ```
 Now that the packages are loaded, let's read in and take a peek at the data.
 
 
 ```{r, message=FALSE, warning=FALSE}
 # Make the year a variable we can change
-YEAR <- "2010"
+YEAR <- "2018"
 
 # Get the file name based on the year we supply
-fileName <- sprintf("fantData%s.csv", YEAR)
+fileName <- sprintf("Data_Files/fantData%s.csv", YEAR)
 
 # Read the csv file
 full <- read.csv(fileName, stringsAsFactors = F)
@@ -66,17 +63,10 @@ Let's take a look at how the teams are doing with fantasy points.
 
 ```{r}
 # Change Josh Gordon's team to New England
-
+full$Team[full$Name == "Josh Gordon"] <- "NWE"
 
 # Filter out the players with no fantasy points
 full <- filter(full, PPR != "", FantPt != "", Team != '2TM', Team != '3TM')
-
-# Group by number of points per team and positions
-full <- 
-  full %>%
-  filter(Position != "") %>%
-  group_by(Team, Position) %>%
-  summarise(Total_Points = sum(PPR)) 
 
 # Rename team names to full name of team
 full$Team[which(full$Team == "ARI")] <- "Arizona"
@@ -103,22 +93,71 @@ full$Team[which(full$Team == "OAK")] <- "Oakland"
 full$Team[which(full$Team == "CIN")] <- "Cincinnati"
 full$Team[which(full$Team == "BAL")] <- "Baltimore"
 full$Team[which(full$Team == "GNB")] <- "Green Bay"
-full$Team[which(full$Team == "IND")] <- "Indinapolis"
+full$Team[which(full$Team == "IND")] <- "Indianapolis"
 full$Team[which(full$Team == "MIN")] <- "Minnesota"
 full$Team[which(full$Team == "LAC")] <- "Los Angeles Chargers"
 full$Team[which(full$Team == "ATL")] <- "Atlanta"
-full$Team[which(full$Team == "PIT")] <- "Pittsburg"
+full$Team[which(full$Team == "PIT")] <- "Pittsburgh"
 full$Team[which(full$Team == "KAN")] <- "Kansas City"
 full$Team[which(full$Team == "LAR")] <- "Los Angeles Rams"
 full$Team[which(full$Team == "NOR")] <- "New Orleans"
 full$Team[which(full$Team == "SDG")] <- "San Diego"
 full$Team[which(full$Team == "STL")] <- "St. Louis"
 
-# Plot into a bar graph
+# Add an average column
+full$AveragePPR <- full$PPR / full$Games_Played
+
+print(head(full))
+
+# # Full with names
+# # Group by number of points per team and positions
+# fullWithNames <- 
+#   full %>%
+#   filter(Position != "") %>%
+#   group_by(Team, Position, Name) %>%
+#   summarise(Total_Points = sum(PPR)) 
+# 
+# # Filter to just get the RBs
+# fullRBWithNames <- 
+#   fullWithNames %>%
+#   filter(Position == "RB")
+# 
+# # Plot QBs into a bar graph
+# ggplot(data = fullRBWithNames, aes(x=reorder(Team, -Total_Points), y=Total_Points, fill=Name)) +
+#   geom_bar(stat = "identity") +
+#   guides(fill = FALSE) +
+#   coord_flip() +
+#   labs(x = "Teams") +
+#   labs(title = sprintf("Running Back Points for %s (ppr)", YEAR)) +
+#   theme_few()
+
+# Group by number of points per team and positions
+fullAverage <- 
+  full %>%
+  filter(Position != "") %>%
+  group_by(Team, Position) %>%
+  summarise(Total_Points = sum(AveragePPR)) 
+
+# Group by number of points per team and positions
+full <- 
+  full %>%
+  filter(Position != "") %>%
+  group_by(Team, Position) %>%
+  summarise(Total_Points = sum(PPR)) 
+
+# Plot into a bar graph for total team points
 ggplot(data = full, aes(x=reorder(Team, -Total_Points), y=Total_Points, fill=Position)) +
   geom_bar(stat = "identity") +
   labs(x = "Teams") +
-  labs(title = sprintf("Team Points for %s (ppr)", YEAR)) +
+  labs(title = sprintf("Total Team Points for %s (ppr)", YEAR)) +
+  coord_flip() +
+  theme_few()
+
+# Plot into a bar graph for average team points per game
+ggplot(data = fullAverage, aes(x=reorder(Team, -Total_Points), y=Total_Points, fill=Position)) +
+  geom_bar(stat = "identity") +
+  labs(x = "Teams") +
+  labs(title = sprintf("Average Team Points per game for %s (ppr)", YEAR)) +
   coord_flip() +
   theme_few()
 
@@ -176,6 +215,71 @@ ggplot(data = fullWR, aes(x=reorder(Team, -Total_Points), y=Total_Points, fill=P
   geom_bar(stat = "identity") +
   labs(x = "Teams") +
   labs(title = sprintf("Wide Receiver Points for %s (ppr)", YEAR)) +
+  coord_flip() +
+  theme_few()
+
+```
+
+# Divisions
+Lets take a look at how the divisions are scoring in fantasy. We'll need to create a new column for divisions and assign a division to each team based on the team name.
+
+```{r}
+# Add a division column
+full$Division <- NA
+
+# Assign teams to the AFC East division
+full$Division[full$Team == "New England" |
+                full$Team == "Buffalo" |
+                full$Team == "Miami" | 
+                full$Team == "New York Jets"] <- "AFC East"
+
+# Assign teams to the AFC North division
+full$Division[full$Team == "Pittsburgh" |
+                full$Team == "Baltimore" |
+                full$Team == "Cincinnati" | 
+                full$Team == "Cleveland"] <- "AFC North"
+
+# Assign teams to the AFC South division
+full$Division[full$Team == "Tennessee" |
+                full$Team == "Indianapolis" |
+                full$Team == "Houston" | 
+                full$Team == "Jacksonville"] <- "AFC South"
+
+# Assign teams to the AFC West division
+full$Division[full$Team == "Kansas City" |
+                full$Team == "Los Angeles Chargers" |
+                full$Team == "Oakland" | 
+                full$Team == "Denver"] <- "AFC West"
+
+# Assign teams to the NFC East division
+full$Division[full$Team == "Philadelphia" |
+                full$Team == "Dallas" |
+                full$Team == "Washington" |
+                full$Team == "New York Giants"] <- "NFC East"
+
+# Assign teams to the NFC North division
+full$Division[full$Team == "Minnesota" |
+                full$Team == "Detroit" |
+                full$Team == "Green Bay" |
+                full$Team == "Chicago"] <- "NFC North"
+
+# Assign teams to the NFC South division
+full$Division[full$Team == "New Orleans" |
+                full$Team == "Carolina" |
+                full$Team == "Atlanta" |
+                full$Team == "Tampa Bay"] <- "NFC South"
+
+# Assign teams to the NFC West division
+full$Division[full$Team == "Arizona" |
+                full$Team == "Los Angeles Rams" |
+                full$Team == "Seattle" |
+                full$Team == "San Francisco"] <- "NFC West"
+
+# Plot Divisions into a bar graph
+ggplot(data = full, aes(x=reorder(Division, -Total_Points), y=Total_Points, fill=Position)) +
+  geom_bar(stat = "identity") +
+  labs(x = "Teams") +
+  labs(title = sprintf("Division Points for %s (ppr)", YEAR)) +
   coord_flip() +
   theme_few()
 
